--- a/public/views/pages/contact.ejs
+++ b/public/views/pages/contact.ejs
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="./styles/themes.css">
     <link rel="stylesheet" href="./styles/components.css">
     <link rel="stylesheet" href="./styles/animations.css">
+
+    <link rel="stylesheet" href="./styles/pages/contact.css">
+
 </head>
-<body class="theme-dark">
-    <%- include('header') %>
+<body>
+    <%- include('../partials/header') %>
 
     <!-- Main Content -->   
     <main class="main-content contact-main">
@@ -100,8 +103,7 @@
         <span>Back to Top</span>
     </button>
 
-    <%- include('footer') %>
-   
+    <%- include('../partials/footer') %>   
 
     <script src="scripts/theme.js"></script>
     <script src="scripts/animations.js"></script>
