--- a/public/views/pages/server-page.ejs
+++ b/public/views/pages/server-page.ejs
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="../styles/themes.css">
     <link rel="stylesheet" href="../styles/components.css">
     <link rel="stylesheet" href="../styles/animations.css">
+
+    <link rel="stylesheet" href="./styles/pages/server-page.css">
 </head>
-<body class="theme-dark">
-    <%- include('header') %>
+<body>
+   <%- include('../partials/header') %>
 
     <!-- Main Content -->
     <main class="main-content server-main">
@@ -255,8 +257,7 @@
         <span>Back to Top</span>
     </button>
 
-        <%- include('footer') %>
-
+    <%- include('../partials/footer') %>
 
     <script src="scripts/theme.js"></script>
     <script src="scripts/animations.js"></script>
