--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./styles/footer.css">
+<link rel="stylesheet" href="./styles/partials/footer.css">
 <link rel="stylesheet" href="./styles/components.css">
 
 <footer class="site-footer">
