--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./styles/header.css">
+<link rel="stylesheet" href="./styles/partials/header.css">
 <link rel="stylesheet" href="./styles/animations.css">
 <link rel="stylesheet" href="./styles/components.css">
 <link rel="stylesheet" href="./styles/themes.css">
